# app/Filament/Resources/Appointments/AppointmentResource.php
@@ -1,0 +1,58 @@
+<?php
+
+namespace App\Filament\Resources\Appointments;
+
+use App\Filament\Resources\Appointments\Pages\CreateAppointment;
+use App\Filament\Resources\Appointments\Pages\EditAppointment;
+use App\Filament\Resources\Appointments\Pages\ListAppointments;
+use App\Filament\Resources\Appointments\Schemas\AppointmentForm;
+use App\Filament\Resources\Appointments\Tables\AppointmentsTable;
+use App\Models\Appointment;
+use BackedEnum;
+use Filament\Resources\Resource;
+use Filament\Schemas\Schema;
+use Filament\Support\Icons\Heroicon;
+use Filament\Tables\Table;
+use Illuminate\Database\Eloquent\Builder;
+use Illuminate\Database\Eloquent\SoftDeletingScope;
+
+class AppointmentResource extends Resource
+{
+    protected static ?string $model = Appointment::class;
+
+    protected static string|BackedEnum|null $navigationIcon = Heroicon::OutlinedRectangleStack;
+
+    public static function form(Schema $schema): Schema
+    {
+        return AppointmentForm::configure($schema);
+    }
+
+    public static function table(Table $table): Table
+    {
+        return AppointmentsTable::configure($table);
+    }
+
+    public static function getRelations(): array
+    {
+        return [
+            //
+        ];
+    }
+
+    public static function getPages(): array
+    {
+        return [
+            'index' => ListAppointments::route('/'),
+            'create' => CreateAppointment::route('/create'),
+            'edit' => EditAppointment::route('/{record}/edit'),
+        ];
+    }
+
+    public static function getRecordRouteBindingEloquentQuery(): Builder
+    {
+        return parent::getRecordRouteBindingEloquentQuery()
+            ->withoutGlobalScopes([
+                SoftDeletingScope::class,
+            ]);
+    }
+}
